# stellar-market

./: .gitignore  ACCESSIBILITY_UX_FIXES.md  CACHE_WARMING_VERIFICATION.md  CODE_OF_CONDUCT.md  COUNTER_PROPOSAL_DIFF_IMPLEMENTATION.md  CRDT_COLLABORATIVE_EDITING_IMPLEMENTATION.md  DISPUTE_TALLY_O1_IMPLEMENTATION.md  EMAIL_VERIFICATION_ENFORCEMENT.md  ESCROW_TWAP_ORACLE_IMPLEMENTATION.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  JOB_PAGINATION_IMPLEMENTATION.md  PR_SUMMARY.md  PWA_BUILD_FIXES.md  README.md  REDIS_CACHING_IMPLEMENTATION.md  REPUTATION_CACHE_IMPLEMENTATION.md  REPUTATION_WEIGHTED_GOVERNANCE.md  VIDEO_EVIDENCE_CAPTURE.md  ci_log.txt  escrow.diff  impl_reputation.py  issue_150.json  issues.md  milestone-api.md  package-lock.json  patch_admin.diff  patch_horizon.diff  pr.md  work.md
contracts/escrow/: Cargo.toml  test_errors.txt
contracts/escrow/src/: fuzz.rs  governance.rs  governance_test.rs  lib.rs  test.rs
contracts/escrow/test_snapshots/fuzz/: fuzz_approve_milestones_batch.1.json  fuzz_balance_invariants.1.json  (+6 more)
contracts/integration-tests/: Cargo.toml  README.md
contracts/integration-tests/test_snapshots/: test_dispute_resolved_for_client.1.json  test_dispute_resolved_for_freelancer.1.json  test_dispute_with_all_milestones_approved.1.json  test_duplicate_vote_on_dispute_fails.1.json  test_full_workflow_with_partial_completion_and_cancellation.1.json  test_happy_path_job_completion_with_reputation.1.json  test_multiple_jobs_with_reputation_accumulation.1.json  test_reputation_review_before_job_completion_fails.1.json
contracts/integration-tests/tests/: integration_test.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs  test_leaderboard.rs
(+836 files in other folders)
