[package]
name = "stellar-market-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-market-reputation-interface = { path = "../reputation_interface" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
