[package]
name = "stellar-market-reputation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-market-escrow = { path = "../escrow" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-market-escrow = { path = "../escrow" }
