[package]
name = "stellar-market-reputation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-market-reputation-interface = { path = "../reputation_interface" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-market-escrow = { path = "../escrow" }
proptest = { version = "1", default-features = false, features = ["std"] }
